# kirana-store-assignment

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  README.md  UBIQUITOUS_LANGUAGE.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_baseline_processed_updates.py  002_inventory_grounding.py  003_billing_core.py  004_khata.py  005_analytics.py  006_shop_profile.py  007_merge_analytics_shop_profile.py  008_preferences.py  009_fefo_batch_tracking.py  009_scheduled_weekly_deck.py  009_shop_branding.py  010_multilingual_aliases.py  010_scheduled_weekly_deck.py  011_fefo_batch_tracking.py  012_multilingual_aliases.py  013_product_barcode.py
docs/: assignment_brief.txt  coding-standards.md
docs/adr/: 0001-claude-agent-sdk-python-harness.md  0002-postgres-vps-longpolling.md  0003-drafts-persisted-no-reservation.md  (+14 more)
src/: config.py  main.py
templates/: invoice.html
tests/: conftest.py  test_analysis_deck.py  test_analytics_tools.py  test_barcode_lookup.py  test_billing_tools.py  test_fefo_batches.py  test_handler.py  test_harness_prompt.py  test_inventory_tools.py  test_invoice_pdf.py  test_khata_reminder_schedule.py  test_khata_reminders_job.py  test_khata_reminders_scan.py  test_khata_tools.py  test_migrations.py  test_multilingual_aliases.py  test_photo_vision_confirm.py  test_preferences.py  test_pricing.py  test_processed_updates.py  test_reorder_suggestions.py  test_scan_barcode.py  test_scheduler_lifecycle.py  test_sent_jobs.py  test_voice.py  test_weekly_deck_job.py  test_weekly_deck_schedule.py
(+41 files in other folders)
