[project]
name = "supermarket-ops-agent"
version = "0.1.0"
description = "Conversational Telegram agent for Indian kirana store operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20",
    "alembic>=1.15",
    "asyncpg>=0.30",
    "claude-agent-sdk>=0.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.8",
    "python-pptx>=1.0.2",
    "sqlalchemy[asyncio]>=2.0",
    "weasyprint>=69.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pypdf>=6.14.2",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
    "testcontainers[postgres]>=4.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["src"]
mypy_path = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
